--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -1,7 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+.wrapper
+{
+  margin-right: auto; /* 1 */
+  margin-left:  auto; /* 1 */
+
+  max-width: 960px; /* 2 */
+
+  padding-right: 10px; /* 3 */
+  padding-left:  10px; /* 3 */
+}
+
 
 *,
 *:before,
@@ -71,4 +83,16 @@ ul li:hover {
   background: rgba(0, 0, 0, .4);
   padding: 2rem 0;
   letter-spacing: .5rem;
+}
+
+.img{
+  width: 500px;
+  position: relative;
+}
+
+.img img
+{
+width: 100%;
+display: block;
+margin: auto;
 }
