--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -85,14 +85,34 @@ ul li:hover {
   letter-spacing: .5rem;
 }
 
-.img{
-  width: 500px;
-  position: relative;
+
+/*cards*/
+.container
+{
+  display: grid;
+  place-items: center;
+  margin-inline: 1.5rem;
+  padding-block: 5rem;
 }
 
-.img img
+.card_Container
 {
-width: 100%;
-display: block;
-margin: auto;
+  display: grid;
+  row-gap: 3.5rem;
+}
+
+.card_article
+{
+  position: relative;
+  /*overflow: hidden;*/
+}
+.card_img{
+  width: 328px;
+  border-radius: 1.5rem;
+}
+.card_data{
+  width: 280px;
+  background-color: #FFCC00;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
 }
