--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -35,7 +35,7 @@ html, body {
   overflow: hidden;
 }
 
-.main {
+.mainindex {
   width: 100%;
   height: 100%;  
   background: radial-gradient(
@@ -47,7 +47,7 @@ html, body {
   transition: transform 1s ease-out;
 }
 
-ul {
+.mainindex ul {
   padding: 0;
   list-style: none;
   text-align: center;
@@ -59,7 +59,7 @@ ul {
   width: 100%;
 }
 
-ul li{
+.mainindex ul li{
   font-weight: 100;
   font-size: 1.5;
   text-transform: uppercase;
@@ -70,17 +70,17 @@ ul li{
     letter-spacing .6s cubic-bezier(0.36, .5, 0.17, 1);
   opacity: 1;
 }
-ul a
+.mainindex ul a
 {
     color: #fff;
     text-decoration: none;
 }
 
-ul li:not(:last-child) {
+.mainindex ul li:not(:last-child) {
   margin-bottom: 2rem;
 }
 
-ul li:hover {
+.mainindex ul li:hover {
   background: rgba(0, 0, 0, .4);
   padding: 2rem 0;
   letter-spacing: .5rem;
@@ -249,4 +249,111 @@ ul li:hover {
     width: 316px;
     padding-inline: 2.5rem;
   }
+}
+/* footer */
+.containerFooter{
+  max-width: 1170px;
+  margin: auto;
+}
+
+.rowFooter{
+  display: flex;
+  flex-wrap:wrap;
+}
+.ulFooter{
+  list-style: none;
+}
+
+.Footer{
+  background-color: black;
+  padding: 70px 0;
+}
+.footer-col{
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4{
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+
+.footer-col ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+.footer-col ul li a{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover{
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links a{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin-right: 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover{
+  color: #24262b;
+  background-color: #ffffff;
+}
+
+/* responsive */
+@media(max-width: 767px){
+  .footer-col {
+      width: 50%;
+      margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col {
+      width: 100%;
+      margin-bottom: 30px;
+}
+}
+
+/* header */
+.dookieheader{
+position: relative;
+left: 0;
+top: 0;
+width: 100%;
+z-index: 99;
+background-color: transparent;
+padding: 40px 0;
+display: flex;
+justify-content: center
+}
+.dookieheader img{
+  width: 0;
+  height: 0;
 }
