--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -29,6 +29,12 @@ html, body {
   height: 100%;
   width: 100%;
 }
+.bodydocenten
+{
+  background-image:url('https://www.curio.nl/sites/default/files/styles/hero_large/public/2024-08/curio_mbo_campagne_7_2000x1125px.jpg?itok=bsDFZgzi');
+ background-size: cover;
+ 
+}
 
 .hid {
   height: 100%;
@@ -98,7 +104,7 @@ html, body {
 
 .card__container {
   display: grid;
-  row-gap: 3.5rem;
+  row-gap: 7rem;
 }
 
 .card__article {
@@ -108,7 +114,7 @@ html, body {
 
 .card__img {
   width: 328px;
-  border-radius: 1.5rem;
+  border-radius: 4rem;
 }
 
 .card__data {
@@ -116,7 +122,7 @@ html, body {
   background-color: #FFCC00;
   padding: 1.5rem 2rem;
   box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
-  border-radius: 1rem;
+  border-radius: 4rem;
   position: absolute;
   bottom: -9rem;
   left: 0;
