--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -404,3 +404,30 @@ justify-content: center
 .blockinfo *{
   text-align: center;
 }
+
+.vakken-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+  .vak-card {
+    background-color: #69197C;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 250ms;
+}
+
+.lesroster{
+  display: flex;
+  justify-content: center;
+}
+.lesroster img{
+  padding-top: 4%;
+  width: 50%;
+}
