--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -294,7 +294,7 @@ html, body {
 }
 
 .Footer{
-  background-color: black;
+  background-color: #a42368;
   padding: 70px 0;
 }
 .footer-col{
@@ -303,7 +303,7 @@ html, body {
 }
 .footer-col h4{
   font-size: 18px;
-  color: #ffffff;
+  color: #BEB0FF;
   text-transform: capitalize;
   margin-bottom: 35px;
   font-weight: 500;
@@ -326,7 +326,7 @@ html, body {
 .footer-col ul li a{
   font-size: 16px;
   text-transform: capitalize;
-  color: #ffffff;
+  color: #FFCC00;
   text-decoration: none;
   font-weight: 300;
   color: #bbbbbb;
@@ -335,7 +335,7 @@ html, body {
 }
 
 .footer-col ul li a:hover{
-  color: #ffffff;
+  color: #FFCC00;
   padding-left: 8px;
 }
 .footer-col .social-links a{
@@ -347,13 +347,13 @@ html, body {
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
-  color: #ffffff;
+  color: #FA339C;
   transition: all 0.5s ease;
 }
 
 .footer-col .social-links a:hover{
   color: #24262b;
-  background-color: #ffffff;
+  background-color: #FA339C;
 }
 
 /* responsive */
@@ -413,7 +413,7 @@ justify-content: center
   margin-top: 20px;
 }
   .vak-card {
-    background-color: #69197C;
+    background-color: #014C35;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -421,7 +421,6 @@ justify-content: center
     padding: 20px;
     text-align: center;
     transition: transform 250ms;
-    margin-bottom: 3rem;
 }
 .vak-card *{
   color: white;
@@ -429,6 +428,9 @@ justify-content: center
 
 .vak-card:hover{
   transform: scale(1.1);
+}
+.vak-card p{
+  font-weight: 50;
 }
 
 .lesroster{
@@ -438,4 +440,41 @@ justify-content: center
 .lesroster img{
   padding-top: 4%;
   width: 50%;
+}
+
+.vakken-container2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+  .vak-card2 {
+    background-color: #FA339C;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 250ms;
+}
+.vak-card2 *{
+  color: white;
+}
+
+.vak-card2:hover{
+  transform: scale(1.1);
+}
+.vak-card2 p{
+  font-weight: 50;
+}
+
+.logo{
+  display: flex;
+  justify-content: left;
+}
+.logo img{
+  width: 9rem;
+ 
 }
