--- a/Leilani_site_zip/css/opendag.css
+++ b/Leilani_site_zip/css/opendag.css
@@ -9,10 +9,10 @@
   margin-right: auto; /* 1 */
   margin-left:  auto; /* 1 */
 
-  max-width: 960px; /* 2 */
+  max-width: 1000px; /* 2 */
 
-  padding-right: 10px; /* 3 */
-  padding-left:  10px; /* 3 */
+  padding-right: 5px; /* 3 */
+  padding-left:  5px; /* 3 */
 }
 
 
@@ -156,6 +156,7 @@ html, body {
 /*=============== CARD ===============*/
 .container {
   display: grid;
+  grid-template-columns:3fr 3fr 3fr;
   place-items: center;
   margin-inline: 1.5rem;
   padding-block: 5rem;
@@ -172,7 +173,7 @@ html, body {
 }
 
 .card__img {
-  width: 328px;
+  width: 300px;
   border-radius: 4rem;
 }
 
@@ -473,8 +474,17 @@ justify-content: center
 .logo{
   display: flex;
   justify-content: left;
+  position:absolute;
 }
 .logo img{
   width: 9rem;
- 
+
+}
+.Blockbtext{
+  text-align: center;
+  color: white;
+}
+
+.Blok{
+  
 }
